--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 - name: Home
-  link: /
+  link: /Project-Saturn
 - name: About
-  link: /about.html
+  link: /Project-Saturn/about.html
 - name: Blog
-  link: /blog.html
+  link: /Project-Saturn/blog.html
