--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ title: Project Saturn
 email: webbling@umich.edu
 description: >- # this means to ignore newlines until "baseurl:"
   University of Michigan Wolverine Soft MDP
-baseurl: "/Project-Saturn" # the subpath of your site, e.g. /blog
-url: "webbling.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://github.com/webbling/Project-Saturn/tree/master/" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: 
 github_username:  webbling
 
