changing baseurl and url

--- a/_config.yml
+++ b/_config.yml
@@ -23,8 +23,7 @@ email: webbling@umich.edu
 description: >- # this means to ignore newlines until "baseurl:"
   University of Michigan Wolverine Soft MDP
 baseurl: "/Project-Saturn" # the subpath of your site, e.g. /blog
-root: "https://github.com/webbling/Project-Saturn/tree/master/"
-url: "https://webbling.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://webbling.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: 
 github_username:  webbling
 
